fix shrinking left menu if the content on the right side was too long

--- a/sparkscope_web/static/css/styles.css
+++ b/sparkscope_web/static/css/styles.css
@@ -13,7 +13,7 @@ body {
     background-color: #f6f6f6;
     border: 1px solid black;
     padding: 20px;
-    width: 350px;
+    flex: 0 0 350px;
     float: left;
     height: 100%;
     overflow-y: auto;
@@ -46,9 +46,8 @@ body {
     background-color: #f6f6f6;
     float: left;
     height: 100%;
-    width: auto;
+    flex: 1;
     overflow-y: auto;
-    flex-grow: 1;
     padding: 20px 0px;
     display: flex;
     flex-direction: column;
